ImmutableMap changed to Map for Sonar